--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <li><a href="https://www.snapchat.com/add/mrjacobphillips" target="_blank">Snapchat</a></li>
 <li><a href="https://youtube.com/JacobPhillipsPhD?sub_confirmation=1" target="_blank">YouTube</a></li>
 </ul>
-<p>Please direct any business inquiries to <a href="mailto:hello@mrjacobphillips.com?subject=Hello!" target="_top">hello@mrjacobphillips.com</a>. I look forward to hearing from you! 😀</p>
+<p>Please direct any business inquiries to <a href="mailto:hello@jacobphillips.com?subject=Hello!" target="_top">hello@jacobphillips.com</a>. I look forward to hearing from you! 😀</p>
 </body>
 </html>
