--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jacob Phillips</title>
-</head>
-<body>
-<h1>Hi there!</h1>
-<p>My name is Jacob Phillips, I'm currently 21 years of age and am from Marquette, MI.</p>
-<p>I love the field of technology, specifically software engineering (my markup & programming languages are HTML, CSS, JavaScript, PHP, Dart, Java, and Swift for those wondering). Thanks for checking out my website. 👋🏻</p>
-<p>I'm currently in the process of rewriting everything around here... Pardon my dust! 🙈 <br><small>(for real, it will happen eventually...)</small></p>
-<h3>Social Links</h3>
-<ul>
-<li><a href="https://mrjp.tv" target="_blank">Twitch (mrjp.tv)</a></li>
-<li><a href="https://discord.gg/atGFwkB" target="_blank">Discord Server</a></li>
-<li><a href="https://www.facebook.com/mrjacobphillips" target="_blank">Facebook</a></li>
-<li><a href="https://instagram.com/mrjacobphillips" target="_blank">Instagram</a></li>
-<li><a href="https://twitter.com/mrjacobphillips" target="_blank">Twitter</a></li>
-<li><a href="https://www.snapchat.com/add/mrjacobphillips" target="_blank">Snapchat</a></li>
-<li><a href="https://youtube.com/JacobPhillipsPhD?sub_confirmation=1" target="_blank">YouTube</a></li>
-</ul>
-<p>Please direct any business inquiries to <a href="mailto:hello@jacobphillips.com?subject=Hello!" target="_top">hello@jacobphillips.com</a>. I look forward to hearing from you! 😀 <br><small><strong>Note:</strong> This domain is <u>not</u> for sale. Such inquiries will be <u>ignored</u> reguardless of the offer.</small></p>
-</body>
+<html>
+  <head>
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://linktr.ee/mrjacobphillips" />
+	  <style>#mydiv{visibility:hidden;}</style>
+  </head>
+  <body onload="showDiv();">
+    <div id="mydiv"><p>Please follow <a href="https://linktr.ee/mrjacobphillips">this link</a> if not automatically redirected.</p></div>
+  </body>
+  <script>function showDiv(){setTimeout(function(){document.getElementById("mydiv").style.visibility = "visible";},1500);}</script>
 </html>
